Added customer reactive form & display in table

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,19 @@
-<app-reactive-form></app-reactive-form>
+<!-- <app-reactive-form></app-reactive-form> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Compiled and minified CSS -->
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
+    <title>Document</title>
+</head>
+<body>
+    <div class="mycard">
+        <app-customer-reactive-form (submitCustomer)="submitCustomerDetail($event)"></app-customer-reactive-form>
+    </div>
+    <app-customer-table [customersKey]="customers"></app-customer-table>
+</body>
+</html>
+
